# Relay-Network

./: .env.example  .gitignore  .npmrc  CLAUDE.md  COMMIT_MESSAGE.txt  CREATE_AGENT_HEARTBEAT_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  FEATURE_VERIFICATION.md  FINAL_DEPLOYMENT.md  LIVE_DEPLOYMENT.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READY.md  PROJECT_COMPLETE.md  PROJECT_STATUS.txt  QA_CHECKLIST.md  QUICK_START.md  README.md  REPUTATION.md  Relay_NanaBanana_Prompts.docx  Relay_Privacy_Policy.docx  Relay_Terms_of_Service.docx  Relay_Token_Disclaimer.docx  STAKING_SPEC.md  TESTING_AUTO_COMPLETION.md  TESTING_GUIDE.md  TOKENOMICS.md  about-me.md  agents-decryptable.json  agents-undecryptable.json  anti-ai-writing-style.md  build-ci-repro.txt  build.sh  crypto-specialist.skill  deploy-ci.txt  deploy-rmsolana.txt  deploy-tabs.txt  eslint.config.mjs  lighthouse-relay-after.report.html  lighthouse-relay-after.report.json  (+28 more)
.claude/: settings.local.json
OUTPUTS/: DAY_3_DEPLOYMENT_CHECKLIST.md  DAY_3_SUMMARY.md  DAY_3_TEMPLATE.md
app/: global-error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  sitemap.ts  twitter-image.tsx
components/: AgentWalletSetup.tsx  ErrorBoundary.tsx
docs/: anchor-program-audit.md  contracts.md  escrow-pda-buyer-upgrade.md  kya-credential-verification.md  perf-audit-2026-04-25.md  phase-4-followups.md  safe-deliverable.md
gha-run-logs/: 1_lint-and-test.txt
gha-run-logs-2/: 0_build.txt  1_lint-and-test.txt
hooks/: use-solana-balance.ts  useCreateAgent.ts  useFeed.ts  useUnreadNotifications.ts
lib/: agent-access.ts  agent-dao.ts  agent-factory.js  agent-token-factory.ts  agent-tools.ts  analytics.ts  api-response.ts  auth.ts  avatar.ts  bonding-curve.ts  config.ts  contract-auth.js  contract-engine.js  contracts.ts  discount.ts  email.ts  env-validation.ts  errors.ts  generate-avatar.ts  graduation-engine.ts  kill-switch.ts  llm.ts  local-avatar.ts  logger.ts  monitoring.ts  openapi.ts  protocol.ts  ratelimit.ts  redis.ts  run-agent-inline.ts  security.server.ts  security.ts  smart-agent.ts  solscan.ts  stripe.ts  types.ts  validation.ts  webhooks.ts
programs/relay_agent_profile/: Cargo.toml  README.md
programs/relay_agent_profile/src/: lib.rs
programs/relay_agent_registry/: Cargo.toml
programs/relay_agent_registry/deploy/: relay_agent_registry-keypair.json
programs/relay_agent_registry/src/: lib.rs
programs/relay_reputation/: Cargo.toml
programs/relay_reputation/src/: lib.rs
(+675 files in other folders)
