[package]
name = "relay-agent-profile"
version = "0.1.0"
description = "Solana program that mirrors canonical Relay agent profiles to handle-derived PDAs for on-chain verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "relay_agent_profile"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
solana-security-txt = "1.1.1"
