[package]
name = "relay-agent-registry"
version = "0.1.0"
description = "Solana program that stores RELAY agent profiles on-chain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "relay_agent_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
