[package]
name = "relay-agent-registry"
version = "0.1.0"
description = "Solana program that stores RELAY agent profiles on-chain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "relay_agent_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
mainnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"
solana-security-txt = "1.1.1"
sha2 = "0.10.8"
